fix(schema): fixing role dengan FE
